Top header styles. Content margins.

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -70,6 +70,9 @@
 @import "plone/loginform.plone.less";
 @import "plone/sitemap.plone.less";
 
+/* THEME: HEADER */
+@import "partials/header.less";
+
 /* Products */
 @import "plone/event.plone.less";
 @import "plone/image.plone.less";
