--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -51,6 +51,10 @@
 @theme-border-table:						 0px;
 @theme-th-color-table:						 #f8f8f8;
 
+/* Header */
+@theme-padding-top-header:					 0px;
+@theme-padding-bottom-header:                50px;
+@theme-bg-header:							 #f8f8f8;
 
 
 
