--- a/src/plonetheme/intkwebsite/theme/css/partials/layout.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/layout.less
@@ -140,6 +140,13 @@
         .links();
     }
 
+
+    #content-core {
+        max-width: 640px;
+        margin: 0 auto;
+        margin-top: 30px;
+    }
+
 }
 
 body.frontend {
