Add styles for footer.

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -70,8 +70,9 @@
 @import "plone/loginform.plone.less";
 @import "plone/sitemap.plone.less";
 
-/* THEME: HEADER */
+/* THEME: HEADER, FOOTER */
 @import "partials/header.less";
+@import "partials/footer.less";
 
 /* Products */
 @import "plone/event.plone.less";
