--- a/src/plonetheme/intkwebsite/theme/css/partials/layout.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/layout.less
@@ -149,6 +149,14 @@
 
 }
 
+#portal-logo {
+    #logo-intk-svg {
+        width: 75px;
+        height: 75px;
+    }
+}
+    
+
 body.frontend {
 
     font-family: @theme-font-family-base;
