--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -38,10 +38,12 @@
 @theme-font-size-h4:            			 1.1em;
 @theme-font-size-h5:            			 0.950em;
 @theme-font-size-h6:            			 0.750em;
-@theme-font-size-ul-ol:						 20px;	
+@theme-font-size-ul-ol:						 20px;
 
 @theme-link-color:							 #242424;
 @theme-link-hover-color:					 #000000;
+@theme-link-color-footer:					 #999999;
+@theme-link-hover-color-footer:				 #999999;
 
 
 /* Tables */	
@@ -56,5 +58,18 @@
 @theme-padding-bottom-header:                50px;
 @theme-bg-header:							 #f8f8f8;
 
-
+/* Footer */
+@theme-footer-bg:							 #f8f8f8;
+@theme-gray-lighter:						 #999999;
+@theme-footer-padding:						 40px 0 75px 0;
+@theme-footer-margin-top:					 40px;
+@theme-footer-margin-left-lg:				 100px;
+@theme-footer-margin-right-lg:				 100px;
+@theme-footer-margin-left-sm:				 25px;
+@theme-footer-margin-right-sm:				 25px;
+@theme-font-size-h5-footer:            	     0.875em;
+@theme-font-size-h5-footer-color:            #666666;
+@theme-font-size-p-footer:					 1.125em;
+@theme-footer-section-margin-top:			 20px;
+@theme-footer-max-width:					 640px;
 
