Fix accessibility issues. Tap targets are not sized appropriately.

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -72,7 +72,9 @@
 
 /* THEME: HEADER, FOOTER */
 @import "partials/header.less";
+@import "partials/navbar.less";
 @import "partials/footer.less";
+
 
 /* Products */
 @import "plone/event.plone.less";
