--- a/src/plonetheme/intkwebsite/theme/css/partials/footer.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/footer.less
@@ -2,8 +2,9 @@
 
 .footerLinks() {
     a {
-        color: @theme-link-color-footer;
+        color: @theme-text-color;
         text-decoration: none;
+        line-height: 40px !important;
 
         &:hover,
         &:focus {
@@ -22,7 +23,7 @@
     margin-top: @theme-footer-margin-top;
 
 	background-color: @theme-footer-bg;
-	color: @theme-gray-lighter;
+	color: @theme-text-color;
 	clear: both;
 
 	.portletWrapper:first-child {
