--- a/src/plonetheme/intkwebsite/theme/css/partials/header.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/header.less
@@ -44,7 +44,7 @@ body.frontend div.outer-wrapper {
     	text-align: center;
     	font-weight: @theme-font-weight-light;
     	font-size: 1.250em;
-    	color: #999999;
+    	color: @theme-text-color;
     }
 
     .newsImageContainer {
@@ -118,6 +118,10 @@ body.frontend div.outer-wrapper {
 		#viewlet-below-content-title .documentByLine {
 			text-align: left;
 		}
+
+        #top-header-wrapper {
+            padding-top: @theme-padding-top-header-sm;
+        }
     }
 
     /* Desktop */
