--- a/src/plonetheme/intkwebsite/theme/css/partials/layout.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/layout.less
@@ -2,7 +2,7 @@
 
 .links() {
     a {
-        color: @theme-link-color;
+        color: @theme-text-color;
         text-decoration: none;
 
         &:hover,
@@ -25,6 +25,7 @@
 
     .discreet {
         font-size: 0.750em;
+        color: @theme-text-color;
     }
 
     /* Headings */
