--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -54,9 +54,9 @@
 @theme-th-color-table:						 #f8f8f8;
 
 /* Header */
-@theme-padding-top-header:					 40px;
+@theme-padding-top-header:					 50px;
 @theme-padding-top-header-sm:				 20px;
-@theme-padding-bottom-header:                50px;
+@theme-padding-bottom-header:                53px;
 @theme-bg-header:							 #f8f8f8;
 
 /* Footer */
@@ -73,3 +73,8 @@
 @theme-font-size-p-footer:					 1.125em;
 @theme-footer-section-margin-top:			 20px;
 @theme-footer-max-width:					 640px;
+
+/* Menu */
+@theme-menu-a-color:						 #ffffff;
+@theme-menu-a-font-size:					 1.125em;
+@theme-menu-a-color-not-currentlanguage:	 #7f7f7f;
