--- a/src/plonetheme/intkwebsite/theme/css/partials/navbar__items.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/navbar__items.less
@@ -89,3 +89,76 @@
 	    float: none;
 	}
 }
+
+/* Language selector */
+#portal-languageselector {
+	position: absolute;
+    left: 20px;
+    top: 45px;
+    height: 50px;
+    z-index: 1000;
+    font-size: @theme-menu-a-font-size;
+
+
+    a {
+    	.Lato();
+	    font-weight: @theme-font-weight-bold;
+	    color: @theme-menu-a-color;
+	    font-size: @theme-menu-a-font-size;
+
+	    &:hover,
+	    &:focus,
+	    &:active,
+	    &:active:focus {
+	    	color: @theme-menu-a-color;
+	    	text-decoration: underline;
+	    }
+    }
+
+    li.currentLanguage a {
+    	color: @theme-menu-a-color-not-currentlanguage;
+
+    	&:hover,
+	    &:focus,
+	    &:active,
+	    &:active:focus {
+	    	color: @theme-menu-a-color-not-currentlanguage;
+	    	text-decoration: underline;
+	    }
+    }
+
+    li {
+    	margin-right: 2px;
+    }
+
+    .language-separator {
+    	color: @theme-menu-a-color-not-currentlanguage;
+    }
+
+    .language-separator:last-child {
+    	display: none;
+    	font-weight: @theme-font-weight-bold;
+    }
+
+    @media(max-width: 991px) {
+    	top: 10px;
+	    left: 0px;
+	    padding-left: 20px;
+    }
+}
+
+body.plone-toolbar-expanded #portal-languageselector {
+	margin-left: 70px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
