Fix accessibility issue in the multiple content page and listings. Text color on top of white changed to a contrast of a least 4.5:1

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -84,3 +84,13 @@
 @import "plone/behaviors.plone.less";
 @import "plone/discussion.plone.less";
 @import "plone/search.plone.less";
+
+
+/* THEME: listings */
+@import "partials/listings.less";
+
+
+
+
+
+
