Add styles for listings when a connector is present. Add template for search results.

--- a/src/plonetheme/intkwebsite/theme/css/partials/listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/listings.less
@@ -52,6 +52,12 @@ body.frontend {
 						text-decoration: @theme-listing-title-text-decoration-hover;
 					}
 				}
+
+				span.item-title {
+					.Lato();
+					font-size: @theme-listing-title-font-size;
+					color: @theme-listing-title-color;
+				}
 			}
 
 			
