Add less file for search results

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -85,11 +85,11 @@
 @import "plone/discussion.plone.less";
 @import "plone/search.plone.less";
 
-
 /* THEME: listings */
 @import "partials/listings.less";
 
-
+/* THEME: search */
+@import "partials/search.less";
 
 
 
