Structure and styles for search results

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -37,7 +37,8 @@
 @import "plone/states.plone.less";
 
 /* THEME: LAYOUT */
- @import "partials/layout.less";
+@import "partials/layout.less";
+@import "partials/buttons.less";
 
 /* Components */
 @import "plone/breadcrumbs.plone.less";
@@ -50,6 +51,9 @@
 @import "plone/controlpanels.plone.less";
 @import "plone/tags.plone.less";
 @import "plone/contents.plone.less";
+
+/* THEME: LAYOUT */
+@import "partials/pagination.less";
 
 /* Patterns */
 @import "plone/accessibility.plone.less";
@@ -77,7 +81,6 @@
 @import "partials/navbar__items.less";
 @import "partials/footer.less";
 
-
 /* Products */
 @import "plone/event.plone.less";
 @import "plone/image.plone.less";
@@ -90,7 +93,7 @@
 
 /* THEME: search */
 @import "partials/search.less";
-
+@import "partials/search__items.less";
 
 
 
