--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -105,5 +105,16 @@
 @theme-list-document-by-line-font-size:		 0.850em;
 @theme-list-document-by-line-margin-bottom:  0px;
 
+/* Search */
+@theme-search-results-count-padding-bottom:	 15px;
 
+
+/* Buttons / Inputs */
+@theme-button-height:						 45px;
+@theme-input-height:						 45px;
+@theme-input-background-color:				 #f8f8f8;
+@theme-input-border-color:				     #f8f8f8;
+@theme-input-border:						 1px solid #f8f8f8;
+@theme-input-color:							 #242424;
+@theme-input-font-size:						 1.125em;
 
