--- a/src/plonetheme/intkwebsite/theme/css/partials/variables.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/variables.less
@@ -111,10 +111,25 @@
 
 /* Buttons / Inputs */
 @theme-button-height:						 45px;
+@theme-button-background-color: 			 #262626;
+@theme-button-border-color: 				 #262626;
+@theme-button-color: 						 #ffffff;
+@theme-button-text-transform: 				 uppercase;
+@theme-button-hover-background-color: 		 #ffffff;
+@theme-button-hover-border-color: 			 #262626;
+@theme-button-hover-color: 					 #262626;
+@theme-button-font-weight: 					 400;
+@theme-button-border-radius: 				 0px;
+@theme-button-box-shadow: 					 none;
+@theme-button-text-shadow: 					 none;
+
 @theme-input-height:						 45px;
 @theme-input-background-color:				 #f8f8f8;
 @theme-input-border-color:				     #f8f8f8;
 @theme-input-border:						 1px solid #f8f8f8;
 @theme-input-color:							 #242424;
 @theme-input-font-size:						 1.125em;
+@theme-input-border-radius:					 0px;
+@theme-input-box-shadow:					 none;
 
+@theme-button-group-margin-left:			 0px;
