--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -95,5 +95,7 @@
 @import "partials/search.less";
 @import "partials/search__items.less";
 
+/* THEME: Persons */
+@import "partials/person.less";
 
 
