--- a/src/plonetheme/intkwebsite/theme/css/partials/pagination.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/pagination.less
@@ -1,44 +1,45 @@
 
+body.frontend {
 
+	.pagination {
+		width: 100%;
 
-.pagination {
-	width: 100%;
+		margin-top: 50px;
+		margin-bottom: 20px;
 
-	margin-top: 50px;
-	margin-bottom: 20px;
-
-	ul {
-		margin-left: 0px;
-    	padding-inline-start: 0px;
-	}
-
-
-
-	li > a, .pagination li > span {
-		background-color: transparent;
-		border: 1px solid transparent !important;
-		color: #797676 !important;
-	}
-
-
-	li > a {
-		&:hover,
-		&:focus {
-			background-color: transparent;
-		    border: 1px solid transparent !important;
-		    -webkit-box-shadow: none;
-		    box-shadow: none;
+		ul {
+			margin-left: 0px;
+	    	padding-inline-start: 0px;
 		}
-	}
 
-	li.active > span {
-		background-color: transparent;
-    	border: 1px solid transparent!important;
-    	color: #242424;
-	}
 
-	li.next {
-		float: right;
-	}
 
+		li > a, .pagination li > span {
+			background-color: transparent;
+			border: 1px solid transparent !important;
+			color: #797676 !important;
+		}
+
+
+		li > a {
+			&:hover,
+			&:focus {
+				background-color: transparent;
+			    border: 1px solid transparent !important;
+			    -webkit-box-shadow: none;
+			    box-shadow: none;
+			}
+		}
+
+		li.active > span {
+			background-color: transparent;
+	    	border: 1px solid transparent!important;
+	    	color: #242424;
+		}
+
+		li.next {
+			float: right;
+		}
+
+	}
 }
