Add person fields to listing views

--- a/src/plonetheme/intkwebsite/theme/css/partials/buttons.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/buttons.less
@@ -2,7 +2,7 @@
 body.frontend {
 
 	/* Buttons */
-	.standalone, .context, .destructive, [type="submit"], button {
+	.standalone, .context, .destructive, [type="submit"], button, .btn {
 		.Montserrat();
 		font-weight: @theme-button-font-weight;
 		border-radius: @theme-button-border-radius;
@@ -11,7 +11,7 @@ body.frontend {
 		height: @theme-button-height;
 	}
 
-	.standalone, [type="submit"], button {
+	.standalone, [type="submit"], button, .btn {
 		background-color: @theme-button-background-color;
 		border-color: @theme-button-border-color;
 		color: @theme-button-color;
