--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -96,6 +96,7 @@
 @import "partials/search__items.less";
 
 /* THEME: Persons */
+@import "partials/popover.less";
 @import "partials/person.less";
 
 
