Add mosaic layout and styles

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -80,6 +80,7 @@
 @import "partials/navbar.less";
 @import "partials/navbar__items.less";
 @import "partials/footer.less";
+@import "partials/mosaic__structure.less";
 
 /* Products */
 @import "plone/event.plone.less";
@@ -90,6 +91,7 @@
 
 /* THEME: listings */
 @import "partials/listings.less";
+@import "partials/mosaic__listings.less";
 
 /* THEME: search */
 @import "partials/search.less";
