--- a/src/plonetheme/intkwebsite/theme/css/partials/header.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/header.less
@@ -4,21 +4,21 @@
 	max-width: 100%;
 }
 
-body.frontend div.outer-wrapper {
-	#portal-header {
-    	margin-top: 0px;
+.header() {
+    #portal-header {
+        margin-top: 0px;
     }
-    
-	#top-header-wrapper {
-		padding-top: @theme-padding-top-header;
-		padding-bottom: @theme-padding-bottom-header;
-		background: @theme-bg-header;
-		margin-bottom: 25px;
-	}
 
-	/* Main title */
+    #top-header-wrapper {
+        padding-top: @theme-padding-top-header;
+        padding-bottom: @theme-padding-bottom-header;
+        background: @theme-bg-header;
+        margin-bottom: 25px;
+    }
 
-	h1.documentFirstHeading {
+    /* Main title */
+
+    h1.documentFirstHeading {
         border-bottom: 0px;
         font-size: 1.500em;
         font-weight: 400;
@@ -30,94 +30,100 @@ body.frontend div.outer-wrapper {
     }
 
     #header-wrapper {
-    	padding-top: 22px;
+        padding-top: 22px;
     }
-    
+
     #viewlet-below-content-title {
-    	.documentByLine {
-    		text-align: center;
-    	}
+        .documentByLine {
+            text-align: center;
+        }
     }
 
     /* Main description */
     .documentDescription {
-    	text-align: center;
-    	font-weight: @theme-font-weight-light;
-    	font-size: 1.250em;
-    	color: @theme-text-color;
+        text-align: center;
+        font-weight: @theme-font-weight-light;
+        font-size: 1.250em;
+        color: @theme-text-color;
     }
 
     .newsImageContainer {
-    	float: none;
-    	margin: 0 auto;
-    	border-radius: 0px;
-    	box-shadow: none;
+        float: none;
+        margin: 0 auto;
+        border-radius: 0px;
+        box-shadow: none;
 
-    	a {
-    		background-color: inherit;
-    		margin: 0 auto;
+        a {
+            background-color: inherit;
+            margin: 0 auto;
 
-    		img {
-    			margin: 0 auto;
-    			max-width: 100%;
-    			height: auto;
-    		}
-    	}
+            img {
+                margin: 0 auto;
+                max-width: 100%;
+                height: auto;
+            }
+        }
     }
 
     .leadImage {
-    	margin-top: 50px;
-    	margin-bottom: 20px;
+        margin-top: 50px;
+        margin-bottom: 20px;
     }
 
     /* Media queries */
 
     /* Mobile */
     @media (max-width: 768px) {
-    	.leadImage {
-	    	margin-top: 0px
-    	}
+        .leadImage {
+            margin-top: 0px
+        }
 
-    	#top-header-wrapper {
-    		margin-bottom: 0px;
-    	}
+        #top-header-wrapper {
+            margin-bottom: 0px;
+        }
     }
 
     @media (max-width: 991px) {
-    	.leadImage {
-	    	margin-top: 0px
-    	}
+        .leadImage {
+            margin-top: 0px
+        }
 
-    	#top-header-wrapper {
-    		margin-bottom: 0px;
-    	}
+        #top-header-wrapper {
+            margin-bottom: 0px;
+        }
 
-    	h1.documentFirstHeading {
-    		text-align: left;
-    	}
+        h1.documentFirstHeading {
+            text-align: left;
+        }
 
-		.documentDescription {
-			text-align: left;
-		} 
+        .documentDescription {
+            text-align: left;
+        } 
 
-		#content-core {
-			width: 100%;
-			padding-left: 25px;
-			padding-right: 25px;
-		}
+        #content-core {
+            width: 100%;
+            padding-left: 25px;
+            padding-right: 25px;
+        }
 
-		#header-wrapper, #content-header {
-			padding-left: 25px;
-			padding-right: 25px;
-		}
+        #header-wrapper, #content-header {
+            padding-left: 25px;
+            padding-right: 25px;
 
-		#top-header-wrapper {
-			padding-bottom: 35px;
-		}   	
+            .container {
+                @media(max-width: 991px) {
+                    width: 100%;
+                }
+            }
+        }
 
-		#viewlet-below-content-title .documentByLine {
-			text-align: left;
-		}
+        #top-header-wrapper {
+            padding-bottom: 35px;
+        }       
+
+        #viewlet-below-content-title .documentByLine {
+            text-align: left;
+        }
 
         #top-header-wrapper {
             padding-top: @theme-padding-top-header-sm;
@@ -126,20 +132,24 @@ body.frontend div.outer-wrapper {
 
     /* Desktop */
     @media(min-width: 1200px) {
-    	.leadImage {
-    		max-width: 960px;
-    		margin-left: auto;
-    		margin-right: auto;
-    	}
+        .leadImage {
+            max-width: 960px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     /* Desktop xlarge */
     @media(min-width: 1440px) {
-    	.leadImage {
-    		max-width: 1280px;
-    		margin-left: auto;
-    		margin-right: auto;
-    	}
+        .leadImage {
+            max-width: 1280px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
-
 }
+
+body.frontend div.outer-wrapper {
+	.header();
+}
+
