Add mosaic listing and rich text structure and styles

--- a/src/plonetheme/intkwebsite/theme/css/partials/layout.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/layout.less
@@ -194,5 +194,16 @@ body#tinymce {
     .links();
 }
 
+.mosaic-rich-text {
+    font-family: @theme-font-family-base;
+    font-size: @theme-font-size-base;
+    font-weight: @theme-font-weight-light;
+    line-height: @theme-line-height-base;
+    color: @theme-main-color;
+    
+    .layout();
+    .links();
+}
+
 
 
