--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
@@ -1,3 +1,4 @@
+
 body.template-edit.mosaic-layout-customized {
 	.listing_structure();
 }
@@ -6,9 +7,12 @@ body.template-layout.mosaic-grid,
 body.template-edit.mosaic-layout-customized {
 	div.entries {
 		margin-top: 50px;
+		max-width: 1540px;
+		margin-left: auto;
+		margin-right: auto;
 
 		/* Apply general rules for entries */
-		.entries()
+		.entries();
 	}
 }
 
