--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__structure.less
@@ -1,4 +1,8 @@
 
+.mosaic-panel .mosaic-rich-text-toolbar {
+	margin-top: -80px;
+	z-index: 1000;
+}
 
 body.template-layout.no-portlet-columns .outer-wrapper>.container .mosaic-grid-row, body.mosaic-enabled.no-portlet-columns .outer-wrapper>.container .mosaic-grid-row {
 	width: 100% !important;
@@ -6,6 +10,17 @@ body.template-layout.no-portlet-columns .outer-wrapper>.container .mosaic-grid-r
 
 body.template-layout.mosaic-grid, 
 body.template-edit.mosaic-layout-customized {
+	.main-container-wrapper {
+		margin-top: -5px;
+	}
+
+	div.outer-wrapper #top-header-wrapper {
+		margin-bottom: 0px;
+	}
+
+	#portal-footer-wrapper {
+		margin-top: 0px;
+	}
 
 	#header-wrapper {
 		.documentFirstHeading {
@@ -61,18 +76,123 @@ body.template-edit.mosaic-layout-customized {
 				text-align: center;
 			}
 		}
-		
 	}
 
 	article#content {
 		margin-bottom: 0px;
 	}
 
+	/* Rich Text */
+	div[class*="html-tile"] {
+		.mosaic-tile-content {
+			max-width: 650px;
+			margin: 0 auto;
+
+			p {
+				color: #797676;
+				line-height: 33px;
+			}
+		}
+	}
+
+
 	@media(max-width: 991px) {
 		article#content {
 			margin-top: 20px;
 			margin-bottom: 0px;
 		}		
+	}
+
+	@media(max-width: 991px) {
+		.mosaic-width-full {
+			padding-left: 0px;
+			padding-right: 0px;
+		}
+
+		.mosaic-grid-row .mosaic-width-full > div[class*="contentlisting"],
+		.mosaic-grid-row .mosaic-width-full > div[class*="html-tile"] {
+			padding-left: 30px;
+		    padding-right: 30px;
+		    padding-top: 30px;
+		    padding-bottom: 30px;
+		    clear: both;
+		    float: left;
+		}
+
+		.mosaic-grid-row .mosaic-width-full > div[class*="html-tile"] {
+			padding-top: 50px;
+			padding-bottom: 50px;
+			padding-left: 45px;
+			padding-right: 45px;
+
+			h3 {
+				margin-bottom: 30px;
+			}
+		}
+
+		.mosaic-grid-row .mosaic-width-full > div[class*="contentlisting"]:nth-last-child(even),
+		.mosaic-grid-row .mosaic-width-full > div[class*="html-tile"]:nth-last-child(even) {
+			background: #f8f8f8;
+			div.documentDescription {
+				color: #000000;
+			}
+		}
+
+		article#content {
+			margin-left: -15px;
+			margin-right: -15px;
+			margin-top: 0px;
+		}
+	}
+
+	@media(min-width: 992px) {
+
+		.mosaic-width-full {
+			padding-left: 0px;
+			padding-right: 0px;
+		}
+
+		#main-container {
+			margin-left: -120px;
+			margin-right: -120px;
+		}
+
+		article#content {
+			margin-left: -15px;
+			margin-right: -15px;
+		}
+
+		.mosaic-grid-row .mosaic-width-full > div[class*="contentlisting"],
+		.mosaic-grid-row .mosaic-width-full > div[class*="html-tile"] {
+			padding-left: 120px;
+		    padding-right: 120px;
+		    padding-top: 30px;
+		    padding-bottom: 30px;
+
+		    width: 100%;
+		    clear: both;
+		    float: left;
+		}
+
+		.mosaic-grid-row .mosaic-width-full > div[class*="html-tile"] {
+			padding-top: 50px;
+			padding-bottom: 50px;
+
+			h3 {
+				text-align: center;
+				margin-bottom: 50px;
+				margin-top: 15px;
+			}
+		}
+
+		.mosaic-grid-row .mosaic-width-full > div[class*="contentlisting"]:nth-last-child(even),
+		.mosaic-grid-row .mosaic-width-full > div[class*="html-tile"]:nth-last-child(even) {
+			background: #f8f8f8;
+			
+			div.documentDescription {
+				color: #000000;
+			}
+		}
 	}
 }
 
@@ -81,6 +201,13 @@ body.template-edit.mosaic-layout-customized {
 	div.outer-wrapper {
 		.header();
 		.layout();
+
+		@media(min-width: 992px) {
+			#main-container {
+				margin-left: -50px;
+				margin-right: -50px;
+			}
+		}
 	}
 }
 
