Add new display mode for categories list

--- a/src/plonetheme/intkwebsite/theme/css/main.less
+++ b/src/plonetheme/intkwebsite/theme/css/main.less
@@ -92,6 +92,7 @@
 /* THEME: listings */
 @import "partials/listings.less";
 @import "partials/mosaic__listings.less";
+@import "partials/mosaic__listings__categories.less";
 
 /* THEME: search */
 @import "partials/search.less";
