--- a/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
+++ b/src/plonetheme/intkwebsite/theme/css/partials/mosaic__listings.less
@@ -14,6 +14,12 @@ body.template-edit.mosaic-layout-customized {
 		/* Apply general rules for entries */
 		.entries();
 	}
+
+	&.section-organizations {
+		div.entries {
+			margin-top: 10px;
+		}
+	}
 }
 
 
